# rust-ffplay

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: file_decoder.rs  main.rs  player.rs
src/file_decoder/: error.rs
src/player/: error.rs
