[package]
name = "ffplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crates used in player (and main)
log = "0.4.17"
blocking-delay-queue = { path = "./blocking-delay-queue" }
ffmpeg-next = "5.1.1"
error-stack = "0.1.1"
# crates only used in main
env_logger = "0.9.0"
partial-min-max = "0.4.0"
sdl2 = "0.35.2"
